syntax = "proto3";

package grpc;

option go_package = "github.com/anibalox/Distribuidos3";



message DatosBase{
	string sector = 1;
	string nombre = 2;
}

message Peticion{
	DatosBase Base = 1;
	string valor = 2;
}

message Direccion{
	string DireccionServidor = 1;
}

message Reloj{
	string RelojServidor = 1;
}

message SoldadosBase{
	int32 CantidadSoldados = 1;
	string RelojServidor = 2;
	string NombreServidor = 3;
}


message MensajeMerge{
	Reloj RelojServidor = 1;
	string Logs = 2;
}

message MensajeSimple {
	string valor = 1;
}

service BrokerRasputin{
	rpc DerivarConsulta(MensajeSimple) returns (Direccion);
	rpc GetSoldados(DatosBase) returns (SoldadosBase);
	rpc Finalizar(MensajeSimple) returns (MensajeSimple);
}

service ServidorPlanetario {
	rpc AgregarBase(Peticion) returns (Reloj);
	rpc RenombrarBase(Peticion) returns (Reloj);
	rpc ActualizarValor(Peticion) returns (Reloj);
	rpc BorrarBase(Peticion) returns (Reloj);
	rpc Merge(MensajeMerge) returns (MensajeMerge);
	rpc GetSoldados(DatosBase) returns (SoldadosBase);
	rpc IniciarMerge(MensajeSimple) returns (MensajeSimple);
	rpc Finalizar(MensajeSimple) returns (MensajeSimple);
}
